--- a/index.html
+++ b/index.html
@@ -21,162 +21,216 @@
 
 <body>
 
-    <header>
+    <header class="header-wrapper">
 
-        <nav>
+        <div class="container">
 
-            <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
+            <nav class="nav-header-wrapper">
 
-            <ul>
+                <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
 
-                <li>
-                    <a href="./index.html" class="nav-header">Studio</a>
-                </li>
-                <li>
-                    <a href="" class="nav-header"> Portfolio</a>
-                </li>
-                <li>
-                    <a href="" class="nav-header">Contacts</a>
-                </li>
+                <ul>
 
-            </ul>
-        </nav>
+                    <li>
+                        <a href="./index.html" class="nav-header">Studio</a>
+                    </li>
 
-        <address class="address-header">
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+                    <li>
+                        <a href="" class="nav-header"> Portfolio</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="nav-header">Contacts</a>
+                    </li>
+
+                </ul>
+
+            </nav>
+
+            <address class="address-header">
+
+                <ul>
+
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
+                    </li>
+
+                    <li>
+                        <a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+
+            </address>
+
+        </div>
+
     </header>
 
     <main>
 
         <section class="maine-wrapper">
 
-            <h1 class="title">Effective Solutions
-                for Your Business
-            </h1>
+            <div class="container">
 
-            <button type="button" class="button-service">Order Service</button>
+                <h1 class="title">Effective Solutions
+                    for Your Business
+                </h1>
+
+                <button type="button" class="button-service">Order Service</button>
+
+            </div>
 
         </section>
 
-        <section>
+        <section class="content-wrapper">
 
-            <h2 class="title-main"> Content section </h2>
+            <div class="container">
 
-            <ul>
+                <h2 class="title-main"> </h2>
 
-                <li>
-                    <h3 class="content-list-title">Strategy</h3>
-                    <p class="content-list-dscr">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
-                </li>
+                <ul>
 
-                <li>
-                    <h3 class="content-list-title">Punctuality</h3>
-                    <p class="content-list-dscr">Bring the key message to the brand's audience for the best price within
-                        the shortest possible
-                        time.</p>
-                </li>
+                    <li>
+                        <h3 class="content-list-title">Strategy</h3>
+                        <p class="content-list-dscr">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.</p>
+                    </li>
 
-                <li>
-                    <h3 class="content-list-title">Diligence</h3>
-                    <p class="content-list-dscr">Research and confirm brands with the strongest digital growth
-                        opportunities and minimize risk.
-                    </p>
-                </li>
+                    <li>
+                        <h3 class="content-list-title">Punctuality</h3>
+                        <p class="content-list-dscr">Bring the key message to the brand's audience for the best
+                            price
+                            within
+                            the shortest possible
+                            time.</p>
+                    </li>
 
-                <li>
-                    <h3 class="content-list-title">Technologies</h3>
-                    <p class="content-list-dscr">Design practice focused on digital experiences. We bring forth a deep
-                        passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
+                    <li>
+                        <h3 class="content-list-title">Diligence</h3>
+                        <p class="content-list-dscr">Research and confirm brands with the strongest digital growth
+                            opportunities and minimize risk.
+                        </p>
+                    </li>
+
+                    <li>
+                        <h3 class="content-list-title">Technologies</h3>
+                        <p class="content-list-dscr">Design practice focused on digital experiences. We bring forth
+                            a
+                            deep
+                            passion for
+                            problem-solving.</p>
+                    </li>
+
+                </ul>
+
+            </div>
 
         </section>
 
         <section class="team-wrapper">
 
-            <h2 class="title-main">Our Team</h2>
+            <div class="container">
 
-            <ul>
-                <li class="team-list-item">
-                    <img src="./images/img-(3).jpg" alt="Mark Guerrero" width="264" />
-                    <h3 class="content-list-title">Mark Guerrero</h3>
-                    <p class="content-list-dscr">Product Designer</p>
-                </li>
+                <h2 class="title-main">Our Team</h2>
 
-                <li class="team-list-item">
-                    <img src="./images/img-(2).jpg" alt="Tom Ford" width="264" />
-                    <h3 class="content-list-title">Tom Ford</h3>
-                    <p class="content-list-dscr">Frontend Developer</p>
-                </li>
+                <ul>
+                    <li class="team-list-item">
+                        <img src="./images/img-(3).jpg" alt="Mark Guerrero" width="264" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Mark Guerrero</h3>
+                            <p class="content-list-dscr">Product Designer</p>
+                        </div>
+                    </li>
 
-                <li class="team-list-item">
-                    <img src="./images/img-(1).jpg" alt="Camila Garcia" width="264" />
-                    <h3 class="content-list-title">Camila Garcia</h3>
-                    <p class="content-list-dscr">Marketing</p>
-                </li>
+                    <li class="team-list-item">
+                        <img src="./images/img-(2).jpg" alt="Tom Ford" width="264" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Tom Ford</h3>
+                            <p class="content-list-dscr">Frontend Developer</p>
+                        </div>
+                    </li>
 
-                <li class="team-list-item">
-                    <img src="./images/img-(0).jpg" alt="Daniel Wilson" width="264" />
-                    <h3 class="content-list-title">Daniel Wilson</h3>
-                    <p class="content-list-dscr">UI Designer</p>
-                </li>
-            </ul>
+                    <li class="team-list-item">
+                        <img src="./images/img-(1).jpg" alt="Camila Garcia" width="264" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Camila Garcia</h3>
+                            <p class="content-list-dscr">Marketing</p>
+                        </div>
+                    </li>
+
+                    <li class="team-list-item">
+                        <img src="./images/img-(0).jpg" alt="Daniel Wilson" width="264" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Daniel Wilson</h3>
+                            <p class="content-list-dscr">UI Designer</p>
+                        </div>
+                    </li>
+
+                </ul>
+
+            </div>
 
         </section>
 
-        <section>
+        <section class="portfolio-wrapper">
 
-            <h2 class="title-main">Our Portfolio</h2>
+            <div class="container">
+
+                <h2 class="title-main">Our Portfolio</h2>
 
 
-            <ul>
-                <li>
-                    <img src="./images/img-5.jpg" alt="Banking App" width="360" />
-                    <h3 class="content-list-title">Banking App</h3>
-                    <p class="content-list-dscr">App</p>
-                </li>
+                <ul>
+                    <li class="portfolio-list-item">
+                        <img src="./images/img-5.jpg" alt="Banking App" width="360" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Banking App</h3>
+                            <p class="content-list-dscr">App</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/img-4.jpg" alt="Cashless Payment" width="360" />
-                    <h3 class="content-list-title">Cashless Payment</h3>
-                    <p class="content-list-dscr">Marketing</p>
-                </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/img-4.jpg" alt="Cashless Payment" width="360" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Cashless Payment</h3>
+                            <p class="content-list-dscr">Marketing</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/img-3.jpg" alt="Online Courses" width="360" />
-                    <h3 class="content-list-title">Meditation App</h3>
-                    <p class="content-list-dscr">App</p>
-                </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/img-3.jpg" alt="Online Courses" width="360" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Meditation App</h3>
+                            <p class="content-list-dscr">App</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/img-2.jpg" alt="Taxi Service" width="360" />
-                    <h3 class="content-list-title">Taxi Service</h3>
-                    <p class="content-list-dscr">Marketing</p>
-                </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/img-2.jpg" alt="Taxi Service" width="360" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Taxi Service</h3>
+                            <p class="content-list-dscr">Marketing</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/img-1.jpg" alt="Screen Illustrations" width="360" />
-                    <h3 class="content-list-title">Screen Illustrations</h3>
-                    <p class="content-list-dscr">Design</p>
-                </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/img-1.jpg" alt="Screen Illustrations" width="360" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Screen Illustrations</h3>
+                            <p class="content-list-dscr">Design</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/img.jpg" alt="Online Courses" width="360" />
-                    <h3 class="content-list-title">Online Courses</h3>
-                    <p class="content-list-dscr">Marketing</p>
-                </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/img.jpg" alt="Online Courses" width="360" />
+                        <div class="thumb-team">
+                            <h3 class="content-list-title">Online Courses</h3>
+                            <p class="content-list-dscr">Marketing</p>
+                        </div>
+                    </li>
 
-            </ul>
+                </ul>
+
+            </div>
 
         </section>
 
@@ -185,10 +239,15 @@
 
     <footer class="footer-wrapper">
 
-        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+        <div class="container">
 
-        <p class="footer-dscr">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.</p>
+            <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+
+            <p class="footer-dscr">Increase the flow of customers and sales for your business with digital marketing
+                &
+                growth solutions.</p>
+
+        </div>
 
     </footer>
 
