--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <link rel="stylesheet" href="./css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,9 +13,12 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
-        integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
@@ -86,7 +88,7 @@
 
             <div class="container">
 
-                <h2 class="title-main"> </h2>
+                <h2 class="title-main-hidden"> <span class="visually-hidden"> Content </span></h2>
 
                 <ul>
 
@@ -133,16 +135,17 @@
 
                 <h2 class="title-main">Our Team</h2>
 
-                <ul>
-                    <li class="team-list-item">
+                <ul class="team-list-item">
+
+                    <li>
                         <img src="./images/img-(3).jpg" alt="Mark Guerrero" width="264" />
                         <div class="thumb-team">
-                            <h3 class="content-list-title">Mark Guerrero</h3>
-                            <p class="content-list-dscr">Product Designer</p>
+                            <h3 class="team-list-title">Mark Guerrero</h3>
+                            <p class="team-list-dscr">Product Designer</p>
                         </div>
                     </li>
 
-                    <li class="team-list-item">
+                    <li>
                         <img src="./images/img-(2).jpg" alt="Tom Ford" width="264" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Tom Ford</h3>
@@ -150,7 +153,7 @@
                         </div>
                     </li>
 
-                    <li class="team-list-item">
+                    <li>
                         <img src="./images/img-(1).jpg" alt="Camila Garcia" width="264" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Camila Garcia</h3>
@@ -158,7 +161,7 @@
                         </div>
                     </li>
 
-                    <li class="team-list-item">
+                    <li>
                         <img src="./images/img-(0).jpg" alt="Daniel Wilson" width="264" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Daniel Wilson</h3>
@@ -176,7 +179,7 @@
 
             <div class="container">
 
-                <h2 class="title-main">Our Portfolio</h2>
+                <h2 class="portfolio-title-main">Our Portfolio</h2>
 
 
                 <ul>
@@ -241,7 +244,9 @@
 
         <div class="container">
 
-            <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+            <div class="footer-link">
+                <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+            </div>
 
             <p class="footer-dscr">Increase the flow of customers and sales for your business with digital marketing
                 &
