--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <div class="container">
 
-                <h2 class="title-main-hidden"> <span class="visually-hidden"> Content </span></h2>
+                <h2 class="visually-hidden"> Content </h2>
 
                 <ul>
 
@@ -148,24 +148,24 @@
                     <li>
                         <img src="./images/img-(2).jpg" alt="Tom Ford" width="264" />
                         <div class="thumb-team">
-                            <h3 class="content-list-title">Tom Ford</h3>
-                            <p class="content-list-dscr">Frontend Developer</p>
+                            <h3 class="team-list-title">Tom Ford</h3>
+                            <p class="team-list-dscr">Frontend Developer</p>
                         </div>
                     </li>
 
                     <li>
                         <img src="./images/img-(1).jpg" alt="Camila Garcia" width="264" />
                         <div class="thumb-team">
-                            <h3 class="content-list-title">Camila Garcia</h3>
-                            <p class="content-list-dscr">Marketing</p>
+                            <h3 class="team-list-title">Camila Garcia</h3>
+                            <p class="team-list-dscr">Marketing</p>
                         </div>
                     </li>
 
                     <li>
                         <img src="./images/img-(0).jpg" alt="Daniel Wilson" width="264" />
                         <div class="thumb-team">
-                            <h3 class="content-list-title">Daniel Wilson</h3>
-                            <p class="content-list-dscr">UI Designer</p>
+                            <h3 class="team-list-title">Daniel Wilson</h3>
+                            <p class="team-list-dscr">UI Designer</p>
                         </div>
                     </li>
 
@@ -244,9 +244,9 @@
 
         <div class="container">
 
-            <div class="footer-link">
-                <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
-            </div>
+
+            <a href="./index.html" class="footer-link">Web<span class="logo-footer">Studio</span></a>
+
 
             <p class="footer-dscr">Increase the flow of customers and sales for your business with digital marketing
                 &
