--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
                 <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
 
-                <ul>
+                <ul class="nav-header-wrapper-ul">
 
-                    <li>
+                    <li class="nav-header-li">
                         <a href="./index.html" class="nav-header">Studio</a>
                     </li>
 
-                    <li>
+                    <li class="nav-header-li">
                         <a href="" class="nav-header"> Portfolio</a>
                     </li>
 
-                    <li>
+                    <li class="nav-header-li">
                         <a href="" class="nav-header">Contacts</a>
                     </li>
 
@@ -51,15 +51,16 @@
 
             <address class="address-header">
 
-                <ul>
+                <ul class="address-header-ul">
 
-                    <li>
+                    <li class="nav-header-li">
                         <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
                     </li>
 
-                    <li>
+                    <li class="nav-header-li">
                         <a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a>
                     </li>
+
                 </ul>
 
             </address>
@@ -90,31 +91,28 @@
 
                 <h2 class="visually-hidden"> Content </h2>
 
-                <ul>
+                <ul class="content-list">
 
-                    <li>
+                    <li class=".content-list-li">
                         <h3 class="content-list-title">Strategy</h3>
                         <p class="content-list-dscr">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
 
-                    <li>
+                    <li class=".content-list-li">
                         <h3 class="content-list-title">Punctuality</h3>
-                        <p class="content-list-dscr">Bring the key message to the brand's audience for the best
-                            price
-                            within
-                            the shortest possible
-                            time.</p>
+                        <p class="content-list-dscr">Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.</p>
                     </li>
 
-                    <li>
+                    <li class=".content-list-li">
                         <h3 class="content-list-title">Diligence</h3>
                         <p class="content-list-dscr">Research and confirm brands with the strongest digital growth
                             opportunities and minimize risk.
                         </p>
                     </li>
 
-                    <li>
+                    <li class=".content-list-li">
                         <h3 class="content-list-title">Technologies</h3>
                         <p class="content-list-dscr">Design practice focused on digital experiences. We bring forth
                             a
@@ -137,7 +135,7 @@
 
                 <ul class="team-list-item">
 
-                    <li>
+                    <li class="team-list-item-li">
                         <img src="./images/img-(3).jpg" alt="Mark Guerrero" width="264" />
                         <div class="thumb-team">
                             <h3 class="team-list-title">Mark Guerrero</h3>
@@ -145,7 +143,7 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class="team-list-item-li">
                         <img src="./images/img-(2).jpg" alt="Tom Ford" width="264" />
                         <div class="thumb-team">
                             <h3 class="team-list-title">Tom Ford</h3>
@@ -153,7 +151,7 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class="team-list-item-li">
                         <img src="./images/img-(1).jpg" alt="Camila Garcia" width="264" />
                         <div class="thumb-team">
                             <h3 class="team-list-title">Camila Garcia</h3>
@@ -161,7 +159,7 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class="team-list-item-li">
                         <img src="./images/img-(0).jpg" alt="Daniel Wilson" width="264" />
                         <div class="thumb-team">
                             <h3 class="team-list-title">Daniel Wilson</h3>
@@ -182,8 +180,9 @@
                 <h2 class="portfolio-title-main">Our Portfolio</h2>
 
 
-                <ul>
-                    <li class="portfolio-list-item">
+                <ul class="portfolio-list-item">
+
+                    <li class="portfolio-list-item-li">
                         <img src="./images/img-5.jpg" alt="Banking App" width="360" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Banking App</h3>
@@ -191,7 +190,7 @@
                         </div>
                     </li>
 
-                    <li class="portfolio-list-item">
+                    <li class="portfolio-list-item-li">
                         <img src="./images/img-4.jpg" alt="Cashless Payment" width="360" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Cashless Payment</h3>
@@ -199,7 +198,7 @@
                         </div>
                     </li>
 
-                    <li class="portfolio-list-item">
+                    <li class="portfolio-list-item-li">
                         <img src="./images/img-3.jpg" alt="Online Courses" width="360" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Meditation App</h3>
@@ -207,7 +206,7 @@
                         </div>
                     </li>
 
-                    <li class="portfolio-list-item">
+                    <li class="portfolio-list-item-li">
                         <img src="./images/img-2.jpg" alt="Taxi Service" width="360" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Taxi Service</h3>
@@ -215,7 +214,7 @@
                         </div>
                     </li>
 
-                    <li class="portfolio-list-item">
+                    <li class="portfolio-list-item-li">
                         <img src="./images/img-1.jpg" alt="Screen Illustrations" width="360" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Screen Illustrations</h3>
@@ -223,7 +222,7 @@
                         </div>
                     </li>
 
-                    <li class="portfolio-list-item">
+                    <li class="portfolio-list-item-li">
                         <img src="./images/img.jpg" alt="Online Courses" width="360" />
                         <div class="thumb-team">
                             <h3 class="content-list-title">Online Courses</h3>
