--- a/index.html
+++ b/index.html
@@ -89,30 +89,30 @@
 
             <div class="container">
 
-                <h2 class="visually-hidden"> Content </h2>
+                <h2 class="visually-hidden"> Content section </h2>
 
                 <ul class="content-list">
 
-                    <li class=".content-list-li">
+                    <li class="content-list-li">
                         <h3 class="content-list-title">Strategy</h3>
                         <p class="content-list-dscr">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
 
-                    <li class=".content-list-li">
+                    <li class="content-list-li">
                         <h3 class="content-list-title">Punctuality</h3>
                         <p class="content-list-dscr">Bring the key message to the brand's audience for the best price
                             within the shortest possible time.</p>
                     </li>
 
-                    <li class=".content-list-li">
+                    <li class="content-list-li">
                         <h3 class="content-list-title">Diligence</h3>
                         <p class="content-list-dscr">Research and confirm brands with the strongest digital growth
                             opportunities and minimize risk.
                         </p>
                     </li>
 
-                    <li class=".content-list-li">
+                    <li class="content-list-li">
                         <h3 class="content-list-title">Technologies</h3>
                         <p class="content-list-dscr">Design practice focused on digital experiences. We bring forth
                             a
